--- a/src/lib/stories/Home.mdx
+++ b/src/lib/stories/Home.mdx
@@ -3,6 +3,8 @@ import item from '../../../package.json?raw';
 
 <main style={{ textAlign: 'center' }}>
 
+<img src="dodo-circle-6.png" style={{ width: 200, height: 'auto' }} />
+
 # Grid
 
 <h3 style={{ fontWeight: 500 }}>v{JSON.parse(item)?.version}</h3>
